--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -50,8 +50,7 @@
                     },
                     "Parameters": [
                         "MessageRouterNodeInstanceType",
-                        "MessageRouterNodeStorage",
-                        "MessageRouterNodeSpotPrice"
+                        "MessageRouterNodeStorage"
                     ]
                 },
                 {
@@ -60,8 +59,7 @@
                     },
                     "Parameters": [
                         "MonitorNodeInstanceType",
-                        "MonitorNodeStorage",
-                        "MonitorNodeSpotPrice"
+                        "MonitorNodeStorage"
                     ]
                 },
                 {
@@ -92,9 +90,6 @@
                 },
                 "MessageRouterNodeInstanceType": {
                     "default": "Instance Type"
-                },
-                "MessageRouterNodeSpotPrice": {
-                    "default": "Spot Price (optional)"
                 },
                 "MessageRouterNodeStorage": {
                     "default": "Persistent Storage"
@@ -202,13 +197,6 @@
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
             "Description": "Instance Type for Solace Message Router",
-            "Type": "String"
-        },
-        "MessageRouterNodeSpotPrice": {
-            "AllowedPattern": "([0-9]{1}[.]{1}[0-9]{2})",
-            "ConstraintDescription": "Must be decimal numeric value",
-            "Default": "0.00",
-            "Description": "Spot Price to bid for requested instances (0.00 will result in using on-demand instances)",
             "Type": "String"
         },
         "MessageRouterNodeStorage": {
@@ -330,13 +318,6 @@
             "Description": "Instance Type for Solace Message Router",
             "Type": "String"
         },
-        "MonitorNodeSpotPrice": {
-            "AllowedPattern": "([0-9]{1}[.]{1}[0-9]{2})",
-            "ConstraintDescription": "Must be decimal numeric value",
-            "Default": "0.00",
-            "Description": "Spot Price to bid for requested instances (0.00 will result in using on-demand instances)",
-            "Type": "String"
-        },
         "MonitorNodeStorage": {
             "ConstraintDescription": "No more than 1024 GiB per device (4 TiB per node).",
             "Default": "0",
@@ -348,14 +329,14 @@
         "QSS3BucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Default": "solace-aws-ha-quickstart",
+            "Default": "quickstart-reference",
             "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Type": "String"
         },
         "QSS3KeyPrefix": {
             "AllowedPattern": "^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$",
             "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
-            "Default": "latest",
+            "Default": "solace/vmr/latest",
             "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
             "Type": "String"
         }
@@ -390,7 +371,6 @@
     "Resources": {
         "VPCStack": {
             "Type": "AWS::CloudFormation::Stack",
-            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
@@ -461,7 +441,6 @@
         "BastionStack": {
             "Type": "AWS::CloudFormation::Stack",
             "Condition": "UsePrivateSubnets",
-            "DeletionPolicy": "Retain",
             "DependsOn": [
                 "VPCStack"
             ],
@@ -527,11 +506,9 @@
             }
         },
         "SolaceStack": {
-            "DependsOn": [
-                "BastionStack"
-            ],
-            "Type": "AWS::CloudFormation::Stack",
+            "DependsOn": [ "BastionStack" ],
             "DeletionPolicy": "Retain",
+            "Type": "AWS::CloudFormation::Stack",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
@@ -563,17 +540,11 @@
                     "MessageRouterNodeInstanceType": {
                         "Ref": "MessageRouterNodeInstanceType"
                     },
-                    "MessageRouterNodeSpotPrice": {
-                        "Ref": "MessageRouterNodeSpotPrice"
-                    },
                     "MessageRouterNodeStorage": {
                         "Ref": "MessageRouterNodeStorage"
                     },
                     "MonitorNodeInstanceType": {
                         "Ref": "MonitorNodeInstanceType"
-                    },
-                    "MonitorNodeSpotPrice": {
-                        "Ref": "MonitorNodeSpotPrice"
                     },
                     "MonitorNodeStorage": {
                         "Ref": "MonitorNodeStorage"
@@ -605,7 +576,7 @@
                             "Outputs.VPCCIDR"
                         ]
                     },
-                    "PrivateSubnets" : {
+                    "PrivateSubnetIDs" : {
                         "Fn::If": [
                             "UsePrivateSubnets",
                             {
@@ -660,48 +631,52 @@
                             {}
                         ]
                     },
-                    "PublicSubnets" : {
+                    "PublicSubnetIDs" : {
                         "Fn::If": [
                             "Use3AZs",
                             {
                                 "Fn::Join": [
                                     ",",
-                                    {
-                                        "Fn::GetAtt": [
-                                            "VPCStack",
-                                            "Outputs.PublicSubnet1ID"
-                                        ]
-                                    },
-                                    {
-                                        "Fn::GetAtt": [
-                                            "VPCStack",
-                                            "Outputs.PublicSubnet2ID"
-                                        ]
-                                    },
-                                     {
-                                        "Fn::GetAtt": [
-                                            "VPCStack",
-                                            "Outputs.PublicSubnet3ID"
-                                        ]
-                                    }                                   
+                                    [
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PublicSubnet1ID"
+                                            ]
+                                        },
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PublicSubnet2ID"
+                                            ]
+                                        },
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PublicSubnet3ID"
+                                            ]
+                                        }
+                                    ]
                                 ]
                             },
                             {
                                 "Fn::Join": [
                                     ",",
-                                    {
-                                        "Fn::GetAtt": [
-                                            "VPCStack",
-                                            "Outputs.PublicSubnet1ID"
-                                        ]
-                                    },
-                                    {
-                                        "Fn::GetAtt": [
-                                            "VPCStack",
-                                            "Outputs.PublicSubnet2ID"
-                                        ]
-                                    }                                  
-                                ]                                
+                                    [
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PublicSubnet1ID"
+                                            ]
+                                        },
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PublicSubnet2ID"
+                                            ]
+                                        }
+                                    ]
+                                ]
                             }
                         ]
                     },
