--- a/ci/config.yml
+++ b/ci/config.yml
@@ -59,12 +59,12 @@ tests:
       - eu-west-1
       - eu-central-1
   2az-poc:
-    parameter_input: solace-aws-ha-2az-proc.json
+    parameter_input: solace-aws-ha-2az-poc.json
     template_file: solace-vmr-master.template
     regions:
       - us-west-1
   3az-poc:
-    parameter_input: solace-aws-ha-3az-proc.json
+    parameter_input: solace-aws-ha-3az-poc.json
     template_file: solace-vmr-master.template
     regions:
       - us-east-1
