--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -156,11 +156,18 @@
             "Type": "String"
         },
         "MessageRouterNodeStorage": {
-            "ConstraintDescription": "No more than 1024 GiB per device (4 TiB per node).",
+            "ConstraintDescription": "No more than 640 GiB per device.",
             "Default": "0",
-            "Description": "Allocated EBS storage for each block device (in GiB; 4 devs per node); 0 indicates ephemeral storage only",
-            "MaxValue": "1024",
-            "MinValue": "0",
+            "Description": "Allocated EBS storage for each block device (in GiB); 0 indicates ephemeral storage only",
+            "AllowedValues": [
+                "0",
+                "20",
+                "40",
+                "80",
+                "160",
+                "320",
+                "640"
+            ],
             "Type": "Number"
         },
         "MonitorNodeInstanceType": {
@@ -202,8 +209,10 @@
             "ConstraintDescription": "3 means each node in own az, 2 puts monitor and backup in one az",
             "Default": "3",
             "Description": "Number of availability zones to use",
-            "MaxValue": "3",
-            "MinValue": "2",
+            "AllowedValues": [
+                "2",
+                "3"
+            ],
             "Type": "Number"
         },
         "RemoteAccessCIDR": {
@@ -228,7 +237,7 @@
         "PrivateSubnetIDs": {
             "Description": "Comma separated list of VPC private subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solace cluster access",
             "Type": "List<AWS::EC2::Subnet::Id>",
-            "Default": ""
+            "Default": "subnet-4b8d329f,subnet-bd73afc8"
         },
          "PublicSubnetIDs": {
             "Description": "Comma separated list of VPC public subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solace cluster access",
@@ -384,6 +393,7 @@
         },
         "MessageRouterPrimaryStack": {
             "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
@@ -454,6 +464,7 @@
         },
         "MessageRouterBackupStack": {
             "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
@@ -524,6 +535,7 @@
         },
         "MonitorStack" :{
             "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
